Changes in verison 1.2
----------------------

* Added two new fast PRNGs (CMWC and XOR).  CMWC provides a very long period
  and the XOR RNG is twice as fast as the Mersenne Twister.  See
  http://school.anhb.uwa.edu.au/personalpages/kwessen/shared/Marsaglia03.html
  for descriptions.

* Fixed RandomDotOrgSeedGenerator so that it can generate seeds > 1kb in size.

* Introduced the Probability class, a new numeric type.  This immutatble value
  type encapsulates a probability value between zero and one.  The class
  enforces the 0..1 bounds and provides convenient methods for working with
  probabilities.


Changes in version 1.1
----------------------

* PermutationGenerator and CombinationGenerator now implement
  java.lang.Iterable (ISSUE#1).

* Moved PermutationGenerator and CombinationGenerator into new combinatorics
  package.

* Moved NumberGenerator and its implementations into new number package.

* Added demo program for different probability distributions (ISSUE#2).

* Added method to the DataSet class for calculating the harmonic mean.

* RNGs no longer log any information to stdout (ISSUE#7) by default.
  The DefaultSeedGenerator class will log the seeds that it generates
  only if the org.uncommons.maths.random.debug System property is set to true.

* Relaxed restriction on the maximum size of the element set used by
  CombinationGenerator.  The maximum was 20 but bigger sets are now permitted
  as long as the total number of combinations is no more than 2^63 (ISSUE#8).

* Added a cache for BigInteger factorial values.  This avoids expensive
  recalculation in code that repeatedly computes factorials.


Changes in version 1.0.2
------------------------

* Added generator for exponential distribution.

* Fixed possibility of out-of-range values in continuous uniform generator.

* Modified AESCounterRNG to allow seed size (AES key size) to be specified.
  Defaults to 128-bits.  192-bits and 256-bits are supported but they require